<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context="com.software.videoplayer.fragment.bt.BtFragment">

<com.software.videoplayer.ui.NoScrollViewPager
    android:id="@+id/bt_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>

    <!-- TODO: Update blank fragment layout -->
    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/add_torrent_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="-10dp"
        android:paddingBottom="10dp"
        android:layout_gravity="right|bottom"
        android:scaleType="fitCenter"
        android:transitionName="fab"
        android:contentDescription="@string/add"
        app:layout_behavior="org.proninyaroslav.libretorrent.customviews.SnackBarBehavior"
        fab:menu_fab_size="normal"
        fab:menu_showShadow="true"
        fab:menu_shadowColor="@color/black_overlay"
        fab:menu_shadowRadius="2dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="1dp"
        fab:menu_colorNormal="@color/colorPrimary"
        fab:menu_colorPressed="@color/colorPrimary"
        fab:menu_colorRipple="@color/white"
        fab:menu_animationDelayPerItem="50"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_textColor="@color/white"
        fab:menu_labels_textSize="14sp"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_colorNormal="@color/colorPrimary"
        app:menu_labels_colorPressed="@color/colorPrimary"
        app:menu_labels_colorRipple="@color/white"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_position="left"
        fab:menu_openDirection="up"
        fab:menu_backgroundColor="@android:color/transparent"
        tools:targetApi="lollipop">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/add_link_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_link_white_18dp"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorPrimary"
            app:fab_colorRipple="@color/white"
            fab:fab_size="mini"
            fab:fab_label="@string/add_link" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/open_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_file_white_18dp"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorPrimary"
            app:fab_colorRipple="@color/white"
            fab:fab_size="mini"
            fab:fab_label="@string/open_file" />
    </com.github.clans.fab.FloatingActionMenu>

</FrameLayout>
